'Front end frameworks added."

--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   },
   "dependencies": {
     "async": "^2.5.0",
+    "angular": "^1.6.6",
+    "animate.css": "^3.5.2",
+    "bootstrap": "^3.3.7",
+    "browserfy": "^1.0.0",
+    "browserify": "^14.4.0",
+    "browserify-middleware": "^7.1.0",
+    "jquery": "^3.2.1",
+    "xel": "0.0.63",
     "bcryptjs": "*",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
