--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "async": "^2.5.0",
     "angular": "^1.6.6",
     "animate.css": "^3.5.2",
+    "async": "^2.5.0",
+    "bcryptjs": "*",
+    "body-parser": "~1.18.2",
     "bootstrap": "^3.3.7",
     "browserfy": "^1.0.0",
     "browserify": "^14.4.0",
     "browserify-middleware": "^7.1.0",
-    "jquery": "^3.2.1",
-    "xel": "0.0.63",
-    "bcryptjs": "*",
-    "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "*",
     "debug": "~2.6.9",
@@ -24,11 +22,14 @@
     "express-session": "*",
     "express-validator": "*",
     "hbs": "~4.0.1",
+    "jquery": "^3.2.1",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "mysql-json": "^0.1.2",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "xel": "0.0.63"
   }
 }
