--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "admin-lte": "^2.4.2",
     "angular": "^1.6.6",
     "animate.css": "^3.5.2",
     "async": "^2.5.0",
     "bcryptjs": "*",
     "body-parser": "~1.18.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "browserfy": "^1.0.0",
     "browserify": "^14.4.0",
     "browserify-middleware": "^7.1.0",
