--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-http": "*",
     "passport-local": "*",
     "path": "^0.12.7",
+    "promise-mysql": "^3.1.1",
     "serve-favicon": "~2.4.5",
     "xel": "0.0.63"
   }
