"Bootstrap validator added. Run a npm start to install."

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "*",
     "body-parser": "~1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-validator": "^0.11.9",
     "browserfy": "^1.0.0",
     "browserify": "^14.4.0",
     "browserify-middleware": "^7.1.0",
