--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "path": "^0.12.7",
     "promise-mysql": "^3.1.1",
     "serve-favicon": "~2.4.5",
+    "typeahead": "^0.2.2",
     "xel": "0.0.63"
   }
 }
