--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "~4.15.5",
     "express-session": "*",
     "express-validator": "*",
+    "handlebars-helper-intl": "^1.0.0-rc-2",
+    "handlebars-intl": "^1.1.2",
     "hbs": "~4.0.1",
     "jquery": "^3.2.1",
     "morgan": "~1.9.0",
